--- a/TypeCheckerGenerator/latex/CoreLanguage.tex
+++ b/TypeCheckerGenerator/latex/CoreLanguage.tex
@@ -10,25 +10,11 @@
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Product}\AgdaSpace{}%
-\AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}×\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaFunction{Σ-syntax}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Data.Nat}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{ℕ}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{\AgdaUnderscore{}+\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaInductiveConstructor{suc}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Unit}\AgdaSpace{}%
-\AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaRecord{⊤}\AgdaSymbol{)}\<%
+\AgdaInductiveConstructor{suc}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -38,16 +24,20 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.List}\<%
+\AgdaModule{Data.String}\<%
 \end{code}
 }
 
 \begin{code}%
-\>[0]\<%
-\\
 \>[0]\AgdaFunction{Scope}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
+\\
+\>[0]\AgdaFunction{Scoped}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -86,8 +76,57 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{toNum}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Var}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\<%
+\\
+\>[0]\AgdaFunction{toNum}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}%
+\>[13]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaNumber{0}\<%
+\\
+\>[0]\AgdaFunction{toNum}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{su}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{toNum}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{fromNum}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Var}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{fromNum}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}\<%
+\\
+\>[0]\AgdaFunction{fromNum}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{su}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{fromNum}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Ess-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
@@ -95,23 +134,7 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\<%
-\\
-\>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Ess-Compu}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\<%
-\\
-\>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Lib-Compu}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
@@ -121,7 +144,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Ess-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
@@ -130,29 +153,38 @@
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPostulate{Char}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Ess-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∙\AgdaUnderscore{}}}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Ess-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \>[2]\AgdaInductiveConstructor{bind}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Ess-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaBound{γ}\<%
+\\
+%
+\>[2]\AgdaInductiveConstructor{thunk}%
+\>[9]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
@@ -164,32 +196,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaKeyword{where}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{ess}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Ess-Const}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
-\AgdaBound{γ}\<%
-\\
-%
-\>[2]\AgdaInductiveConstructor{thunk}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Ess-Compu}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
-\AgdaBound{γ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Ess-Compu}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
@@ -199,61 +206,61 @@
 \AgdaDatatype{Var}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Ess-Compu}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \>[2]\AgdaInductiveConstructor{elim}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Lib-Compu}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Ess-Compu}\AgdaSpace{}%
-\AgdaBound{γ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Lib-Compu}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaKeyword{where}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{ess}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Ess-Compu}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Lib-Compu}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∷\AgdaUnderscore{}}}%
 \>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Lib-Compu}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Lib}\AgdaSpace{}%
+\>[0]\AgdaFunction{↠}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\AgdaSpace{}%
-\AgdaKeyword{where}\AgdaSpace{}%
-\AgdaInductiveConstructor{ess}\AgdaSpace{}%
-\AgdaInductiveConstructor{lib}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Lib}\<%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaBound{γ}\<%
 \\
+\>[0]\AgdaFunction{↠}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\<%
+\\
+\>[0]\AgdaCatchallClause{\AgdaFunction{↠}}%
+\>[3]\AgdaCatchallClause{\AgdaBound{x}}%
+\>[10]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Dir}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -268,8 +275,6 @@
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{Term}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Lib}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Dir}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Scope}\AgdaSpace{}%
@@ -277,64 +282,255 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 \>[0]\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{ess}\AgdaSpace{}%
 \AgdaInductiveConstructor{const}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{Ess-Const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
 \>[0]\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{ess}\AgdaSpace{}%
 \AgdaInductiveConstructor{compu}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{Ess-Compu}\AgdaSpace{}%
+\AgdaDatatype{Compu}\AgdaSpace{}%
 \AgdaBound{γ}\<%
 \\
-\>[0]\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{lib}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{Lib-Const}\AgdaSpace{}%
-\AgdaBound{γ}\<%
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{private}\<%
 \\
-\>[0]\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{lib}\AgdaSpace{}%
-\AgdaInductiveConstructor{compu}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{Lib-Compu}\AgdaSpace{}%
-\AgdaBound{γ}\<%
-\end{code}
-
-\begin{code}%
-\>[0]\AgdaComment{--example construction (ΠS\textbackslash{}xT)}\<%
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{variable}\<%
 \\
-\>[0]\AgdaComment{-- to remove}\<%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Dir}\<%
 \\
-\>[0]\AgdaFunction{dep-func}\AgdaSpace{}%
+%
+\>[4]\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{print}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{ess}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaNumber{0}\<%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
 \\
-\>[0]\AgdaFunction{dep-func}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{ess}\AgdaSpace{}%
+\>[0]\AgdaFunction{print}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'Π'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[25]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{fromChar}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaFunction{print}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaInductiveConstructor{ess}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{ess}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'S'}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaInductiveConstructor{ess}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}%
+\>[25]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{t}\<%
+\\
+\>[0]\AgdaFunction{print}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{ess}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[25]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"λ"}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaFunction{print}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[25]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"\AgdaUnderscore{}"}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{"\AgdaUnderscore{}"}\<%
+\\
+\>[0]\AgdaFunction{print}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[25]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"VAR"}\<%
+\\
+\>[0]\AgdaFunction{print}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"elim"}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{s}\<%
+\\
+\>[0]\AgdaFunction{print}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSymbol{)}%
+\>[25]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{"∶"}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{print}\AgdaSpace{}%
+\AgdaBound{T}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{printrawvar}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Var}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
+\\
+\>[0]\AgdaFunction{printrawvar}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}%
+\>[19]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"ze"}\<%
+\\
+\>[0]\AgdaFunction{printrawvar}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{su}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"su "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printrawvar}\AgdaSpace{}%
+\AgdaBound{v}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPostulate{String}\<%
+\\
+\>[0]\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
-\AgdaString{'T'}\AgdaSymbol{))))}\<%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"(` '"}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{fromChar}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{"')"}\<%
+\\
+\>[0]\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"("}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{" ∙ "}%
+\>[59]\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{")"}\<%
+\\
+\>[0]\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"(bind "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{")"}\<%
+\\
+\>[0]\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"(thunk "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{")"}\<%
+\\
+\>[0]\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"(var "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printrawvar}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{")"}\<%
+\\
+\>[0]\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"(elim "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{" "}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{")"}\<%
+\\
+\>[0]\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSymbol{)}%
+\>[29]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaString{"("}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{"∶"}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaFunction{printraw}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
+\AgdaString{")"}\<%
 \end{code}
